--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+
+<p>Name: <%= @item.name %></p>
+<p>Description: <%= @item.description %></p>
+<p>Price: <%= @item.unit_price %></p>
